syntax = "proto3";

package tarianpb.api;
option go_package = "github.com/devopstoday11/tarian/pkg/tarianpb";

import "tarianpb/types.proto";

service Config {
	rpc GetConstraints(GetConstraintsRequest) returns (GetConstraintsResponse) {}
	rpc AddConstraint(AddConstraintRequest) returns (AddConstraintResponse) {}
}

service Event {
	rpc IngestEvent(IngestEventRequest) returns (IngestEventResponse) {}
}

message GetConstraintsRequest {
	string namespace = 1;
}

message GetConstraintsResponse {
	repeated tarianpb.types.Constraint constraints = 1;
}

message AddConstraintRequest {
	tarianpb.types.Constraint constraint = 1;
}

message AddConstraintResponse {
	bool success = 1;
}

message IngestEventRequest {
	tarianpb.types.Event event = 1;
}

message IngestEventResponse {
	bool success = 1;
}
